--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>hello world</h1>
-
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<div class="container" style="margin-top: 50px">
+  <router-outlet></router-outlet>
+</div>
