--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,3 +1,9 @@
-<p>Profile page</p>
-<p>nav bar here</p>
-<p>content here</p>
+<div class="list-group">
+  <a class="list-group-item list-group-item-action active">
+    Cras justo odio
+  </a>
+  <a class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+  <a class="list-group-item list-group-item-action">Morbi leo risus</a>
+  <a class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+  <a class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+</div>
