fix: cleaned code and comments

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
               <li class="nav-item">
-                <a class="nav-link" href="/profile">Trainer Profile</a>
+                <a class="nav-link" routerLink="/profile">Trainer Profile</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/catalogue">Pokemon Catalogue</a>
