--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,16 +1,1 @@
-<ng-container>
-  <div class="list-group" *ngIf="!user?.pokemon?.length">
-    <a class="list-group-item list-group-item-action active">
-      You Havent Capured any pokemons yet...🤏😂
-    </a>
-  </div>
-  <div class="list-group" *ngIf="user?.pokemon?.length">
-    <a class="list-group-item list-group-item-action active">
-      Captured pokemons 🐿🦎🐊🐢🐘🐐
-    </a>
-    <ng-container *ngFor="let item of user?.pokemon">
-      <a class="list-group-item list-group-item-action pokemon-list-item">{{item}}</a>
-    </ng-container>
-  </div>
-
-</ng-container>
+<app-trainer-list-items ></app-trainer-list-items>
