Implemented: Pokemon addition

--- a/src/app/components/pokemon-catalogue/pokemon-catalogue.component.html
+++ b/src/app/components/pokemon-catalogue/pokemon-catalogue.component.html
@@ -20,7 +20,7 @@
                 {{ pokemon.name }}
 			</td>
 			<td>
-                <button>Catch!</button>
+                <button (click)="catchPokemon(pokemon.name)">Catch!</button>
             </td>
                 
 		</tr>
