--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,14 +1,14 @@
 <ng-container>
-  <div class="list-group" *ngIf="!user?.pokemon?.length">
+  <div class="list-group" *ngIf="!(user|async)?.pokemon?.length">
     <a class="list-group-item list-group-item-action active">
       You Havent Capured any pokemons yet...🤏😂
     </a>
   </div>
-  <div class="list-group" *ngIf="user?.pokemon?.length">
+  <div class="list-group" *ngIf="(user|async)?.pokemon?.length">
     <a class="list-group-item list-group-item-action active">
       Captured pokemons 🐿🦎🐊🐢🐘🐐
     </a>
-    <ng-container *ngFor="let item of user?.pokemon">
+    <ng-container *ngFor="let item of (user|async)?.pokemon">
       <a class="list-group-item list-group-item-action pokemon-list-item">{{item}}</a>
     </ng-container>
   </div>
