fix: added basic logic for login

--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,1 +1,4 @@
-<app-trainer-list-items ></app-trainer-list-items>
+<div class="">
+   <h1 class="userName">Welcome {{name}}</h1>
+  <app-trainer-list-items ></app-trainer-list-items>
+</div>
