implemented: catalogue shows pokeball or catch-button

--- a/src/app/components/pokemon-catalogue/pokemon-catalogue.component.html
+++ b/src/app/components/pokemon-catalogue/pokemon-catalogue.component.html
@@ -1,34 +1,35 @@
-<p>pokemon-catalogue works!</p>
-<p>You can bind our <code>NgbPagination</code> component with slicing the data list</p>
+<div class="pokemon-list-card">
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th scope="col">Pokemon</th>
+				<th scope="col"></th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr *ngFor="let pokemon of pokemons$ | async">
+				<td>
+					<img [src]="pokemon?.picture" class="me-2" width="50px" alt="picture" />
+					{{ pokemon.name }}
+				</td>
+				<td style="position: relative;">
+					<img *ngIf="caught(pokemon.name)" [src]="'../../assets/Pokeball.png'" width="48px" style="position:absolute; right: 18px;"/>
+					<button *ngIf="!(caught(pokemon.name))" (click)="catchPokemon(pokemon.name)"  style="position:absolute; right: 15px;"class="btn btn-sm catch-button">Catch!</button>
+				</td>
 
-<table class="table table-striped">
-	<thead>
-		<tr>
-			<th scope="col">Pokemon</th>
-			<th scope="col"></th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr *ngFor="let pokemon of pokemons$ | async">
-			<td>
-				<img [src]="pokemon?.picture" class="me-2" style="width: 20px" alt="" />
-				{{ pokemon.name }}
-			</td>
-			<td>
-                <button (click)="catchPokemon(pokemon.name)">Catch!</button>
-            </td>
+			</tr>
+		</tbody>
+	</table>
 
-		</tr>
-	</tbody>
-</table>
 
-<div class="d-flex justify-content-between p-2">
-	<ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize" [maxSize]="5" [rotate]="true"
-		(pageChange)="refreshPokemons()">
-	</ngb-pagination>
-	<select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshPokemons()">
-		<option [value]="10">10 items per page</option>
-		<option [value]="20">20 items per page</option>
-		<option [value]="50">50 items per page</option>
-	</select>
+	<div class="d-flex justify-content-between p-2">
+		<ngb-pagination [collectionSize]="collectionSize" [(page)]="page" [pageSize]="pageSize" [maxSize]="5" [rotate]="true"
+			(pageChange)="refreshPokemons()">
+		</ngb-pagination>
+		<select class="form-select" style="width: auto" [(ngModel)]="pageSize" (ngModelChange)="refreshPokemons()">
+			<option [value]="10">10 items per page</option>
+			<option [value]="20">20 items per page</option>
+			<option [value]="50">50 items per page</option>
+		</select>
+	</div>
 </div>
