--- a/src/app/components/pokemon-catalogue/pokemon-catalogue.component.css
+++ b/src/app/components/pokemon-catalogue/pokemon-catalogue.component.css
@@ -6,7 +6,35 @@
   
     box-shadow: 1px 1px 4px black;
     border-style: none;
-  }
+    position:absolute;
+    right: 15px;
+    top: 15px
+}
+.pokemon-item {
+    display: inline-flex;
+    width: 100%;
+    height: 80px;
+    align-items: center;
+}
+
+.pokeball {
+    position:absolute;
+    right: 18px;
+    width: 48px;
+    top: 14px;
+}
+.image-container{
+    width: 100px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
+.pokemon-image{
+    max-width: 90px;
+    max-height: 50px;
+    
+}
 
 .pokemon-list-card {
     display: flex;
@@ -14,6 +42,10 @@
     flex-direction: column;
     align-content: space-around;
     flex-wrap: wrap;
+}
+
+.list-elements{
+    height: 80px;
 }
 
 @media only screen and (max-width: 600px) {
