comments: Added documentations for functions

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
                 <a class="nav-link" routerLink="/profile">Trainer Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/catalogue">Pokemon Catalogue</a>
+                <a class="nav-link" href="/">Pokemon Catalogue</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
