--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,9 +1,8 @@
 <ng-container >
-  <div class="group-flow loginPageSummary" *ngIf="userCurrent">
-   <app-login-page-alt></app-login-page-alt>
-  </div>
   <div *ngIf="!userCurrent">
     <app-login-form (login)="handleLogin()"></app-login-form>
   </div>
-
+  <div *ngIf="userCurrent">
+    <app-pokemon-catalogue></app-pokemon-catalogue>
+  </div>
 </ng-container>
